changes made - fetch, localStorage

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 
     <div id="game-container"></div>
 
+    <div id="reg-container">
+      <p id="user-score-info"></p>
+      <form id="score-form" type="submit">
+        <label for="username">Insert Username</label>
+        <input type="text" id="username" name="username" required />
+        <button type="submit">Save</button>
+      </form>
+    </div>
+
     <div id="time-div"></div>
   </body>
 </html>
