--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="index.js"></script>
     <title>Quiz game</title>
   </head>
   <body>
     <h1>Welcome to the quiz game!</h1>
 
-    <button type="button" id="rules-btn">Rules</button>
-    <button type="button" id="new-game-btn">New game</button>
-    <button type="button" id="score-btn">Scoreboard</button>
+    <section class="landing-actions">
+      <button type="button" id="rules-btn">Rules</button>
+      <button type="button" id="new-game-btn">New game</button>
+      <button type="button" id="score-btn">Scoreboard</button>
+    </section>
 
     <div id="difficulty-container">
       <p id="select-difficulty">Select a difficulty</p>
