changes to html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
       <h1>Welcome to the quiz game!</h1>
     </header>
+
     <main>
       <section class="landing-actions">
         <button type="button" id="start-btn">Start</button>
@@ -57,24 +58,24 @@
         <button type="button" id="hard-score-btn">Hard scoreboard</button>
       </section>
 
-      <div id="difficulty-container">
+      <section id="difficulty-container">
         <p id="select-difficulty">Select a difficulty</p>
         <button type="button" id="easy-level-btn">Easy</button>
         <button type="button" id="medium-level-btn">Medium</button>
         <button type="button" id="hard-level-btn">Hard</button>
-      </div>
+      </section>
 
-      <div id="rules-container">
+      <section id="rules-container">
         <p>1. Select a difficulty - easy, medium, or hard</p>
         <p>2. Answer 10 questions (10 sec for each question)</p>
         <p>3. Reach the top of the scoreboard</p>
-      </div>
+      </section>
 
-      <div id="score-container"></div>
+      <section id="score-container"></section>
 
-      <div id="game-container"></div>
+      <section id="game-container"></section>
 
-      <div id="reg-container">
+      <section id="reg-container">
         <p id="user-score-info"></p>
         <form id="score-form" type="submit">
           <div class="name-input">
@@ -83,7 +84,7 @@
           </div>
           <button type="submit">Save</button>
         </form>
-      </div>
+      </section>
     </main>
   </body>
 </html>
