--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
 
       <section id="difficulty-container">
-        <p id="select-difficulty">Select a difficulty</p>
+        <p id="select-difficulty">Select difficulty</p>
         <button type="button" id="easy-level-btn">Easy</button>
         <button type="button" id="medium-level-btn">Medium</button>
         <button type="button" id="hard-level-btn">Hard</button>
