--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <button type="button" id="new-game-btn">New game</button>
         <button type="button" id="rules-btn">Rules</button>
         <button type="button" id="score-btn">Scoreboard</button>
-        <button type="button" id="easy-score-btn">Easy scoreboard</button>
-        <button type="button" id="medium-score-btn">Medium scoreboard</button>
-        <button type="button" id="hard-score-btn">Hard scoreboard</button>
+        <button type="button" id="easy-score-btn">Easy scores</button>
+        <button type="button" id="medium-score-btn">Medium scores</button>
+        <button type="button" id="hard-score-btn">Hard scores</button>
       </section>
 
       <section id="difficulty-container">
